# py4pd-upic

./: .gitignore  README.deken.pd  README.md  __init__.py  ellipse.pd  my-plaits.pd  py4pd-upic.pd  py4pd-upic.py  pyproject.toml  read-svg.pd  sen.pd  sen2.pd
help/: attrfilter-help.pd  attrget-help.pd
upic/: __init__.py  svgItens.py
upic/help/: readsvg-help.pd  svg2pd-help.pd
