[project]
name = "py4pd-upic" # name to be used when running pip install 
version = "1.0" # version number 
description = "py4pd-upic is a Pure Data (Pd) external object inspired by the works of Iannis Xenakis. This object is designed to facilitate the conversion of SVG (Scalable Vector Graphics) data into coordinate information within the Pure Data environment." # Description
dependencies = [
    "svgpathtools",
]

[project.urls]
"Source Code" = "https://github.com/charlesneimog/py4pd-upic" 

[tool.setuptools]
packages = ["upic"]  # Name of the package to be imported

[tool.setuptools.package-data]
"upic" = ["*", "help/*"]  # Include all files inside upic folder and all files inside upic/help folder

[tool.black]
line-length = 180

